--- a/css/style.css
+++ b/css/style.css
@@ -71,13 +71,11 @@ body {
   color: #18CFAB;
   border-bottom: 2px solid #18CFAB;
 }
-.nav-item-link:hover .nav-item {
-    
-}
 
 /*********BANNER********/
 .banner {
     background-image: url("../images/banner-bg.jpg");
+    background-attachment: fixed;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -168,7 +166,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 80px;
+    padding: 80px 0 90px;
 }
 .services-heading {
     text-transform: capitalize;
@@ -204,20 +202,45 @@ body {
     line-height: 40px;
     padding: 16px 20px;
     text-transform: capitalize;
+    color: #717171;
 }
 .services-nav-item:hover {
     border: 1px solid #18CFAB;
 }
 .service-info {
+    display: none;
+}
+.service-info-active {
     display: flex;
 }
 .service-img-frame {
     margin-right: 15px;
 }
+.service-img {
+    width: 190px;
+    height: 140px;
+}
 .service-info-text {
     font-size: 14px;
     line-height: 24px;
     color: #777777;
+}
+
+.choosed-service {
+    background: #18CFAB;
+    color: white;
+    position: relative;
+}
+.choosed-service::after {
+    content: '';
+    display: block;
+    width: 20px;
+    height: 20px;
+    background-color: #18CFAB;
+    transform: rotate(45deg);
+    position: absolute;
+    bottom: -10px;
+    right: 83px;
 }
 
 /**********PURCHASE*********/
@@ -309,6 +332,9 @@ body {
 }
 .work-items {
     width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 .work-item {
     width: 25%;
@@ -414,9 +440,6 @@ body {
     color: #8A8A8A;
     text-transform: capitalize;
 }
-
-
-
 
 /**********NEWS*********/
 
