--- a/css/style.css
+++ b/css/style.css
@@ -388,6 +388,20 @@ body {
     text-transform: uppercase;
     color: white;
 }
+.preloader {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    border: 5px solid #18CFAB;
+    border-top-color: transparent;
+    animation: rotateLoader 1s linear infinite;
+    margin: 70px auto 0;
+  }
+  
+  @keyframes rotateLoader {
+    0% { transform: rotate(0deg)}
+    100% { transform: rotate(360deg)}
+  }
 
 /**********WORK-ITEM-HOVER***********/
 .work-item-hover {
