--- a/css/style.css
+++ b/css/style.css
@@ -772,6 +772,10 @@ button[id*='slick-slide-control'] {
     grid-column-gap: 3px;
     margin-bottom: 3px;
 }
+.grid2-img {
+    width: 100%;
+    height: 170px;
+}
 
 .grid3 {
     display: grid;
