--- a/css/style.css
+++ b/css/style.css
@@ -761,7 +761,10 @@ button[id*='slick-slide-control'] {
 .gallery-item {
     position: relative;
     margin-bottom: 10px;
-    
+    width: 378px;   
+}
+.gallery-item-wrap {
+    position: relative;
 }
 .overlay {
     position: absolute;
@@ -775,7 +778,8 @@ button[id*='slick-slide-control'] {
 }
 .gallery-img {
     display: block;
-    width: 378px;
+    width: 100%;
+    height: 100%;
 }
 .gallery-icon-frame {
     width: 25px;
@@ -794,56 +798,19 @@ button[id*='slick-slide-control'] {
     left: 75px;
 }
 
-.gallery-item2 {
+.gallery-item-top {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    grid-template-rows: 170px;
+    grid-gap: 3px;
+    margin-bottom: 3px;
 }
-.gallery-item-wrap2 {
-    position: relative;
-}
-.gallery2-img {
-    display: block;
-    width: 180px;
-    height: 170px;
-}
-
-.overlay2 {
-    position: absolute;
-    width:100%;
-    height:100%;
-    background-color:#000;
-    opacity: 0;
-}
-.gallery-item-wrap2:hover .overlay2 {
-    opacity: 0.5;
-}
-
-.gallery-item3 {
+.gallery-item-bottom {
     display: grid;
+    grid-template-rows: 90px 90px 90px;
     grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 3px;
 }
-.gallery-item-wrap3 {
-    position: relative;
-}
-.gallery-item-wrap3:hover .overlay3 {
-    opacity: 0.5;
-}
-.overlay3 {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-color:#000;
-    opacity: 0;
-}
-.gallery3-img {
-    width: 120px;
-    height: 90px;
-    display: block;
-}
-
-
-
-
 
 .gallery-load-more-btn {
     background-color: #18CFAB;
@@ -900,7 +867,6 @@ button[id*='slick-slide-control'] {
     background-color:  #AEAEAE; 
     display: block;
     margin-left: 10px;
-
 }
 .copyright-reserved {
     text-transform: capitalize;
